be able to attach file to message wider tira button add confirm dialog fix z-index quick scroll

--- a/public_html/css/site/page/page.css
+++ b/public_html/css/site/page/page.css
@@ -306,3 +306,6 @@ img {
 	list-style: none;
 }
 
+.ui-listview>li.ui-li-has-alt>.ui-btn+.ui-btn {
+	width: 4em;
+}
